--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "config": "^3.3.1",
     "framer-motion": "^2.1.0",
+    "moment": "^2.27.0",
     "next": "9.4.4",
     "nextjs-progressbar": "^0.0.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-lazyload": "^3.0.0",
     "react-select": "^3.1.0"
   }
 }
