--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.3.0",
+    "@heroicons/react": "^1.0.2",
     "framer-motion": "^2.1.0",
     "lodash.clonedeep": "^4.5.0",
     "moment": "^2.27.0",
@@ -18,5 +20,10 @@
     "react-dom": "16.13.1",
     "react-lazyload": "^3.0.0",
     "react-select": "^3.1.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^9",
+    "postcss": "^7",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
 }
