--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@headlessui/react": "^1.3.0",
     "@heroicons/react": "^1.0.2",
+    "@tailwindcss/typography": "^0.4.1",
     "framer-motion": "^2.1.0",
     "lodash.clonedeep": "^4.5.0",
     "moment": "^2.27.0",
@@ -19,6 +20,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-lazyload": "^3.0.0",
+    "react-markdown": "^6.0.2",
     "react-select": "^3.1.0"
   },
   "devDependencies": {
